<resources>
    <string name="app_name">New York Travel</string>
    <string name="tab_attractions">Attractions</string>
    <string name="tab_map">Maps</string>
    <string name="tab_reviews">Reviews</string>
    <string name="no_reviews_found">Sorry. We can\'t find any reviews for that attraction.</string>
    <string name="no_attractions_found">Sorry. We can\'t find any attractions.</string>
    <string name="title_activity_maps">Map</string>
    <string name="activity_detail_attraction_alt">Attraction image</string>
    <string name="activity_detail_view_on_map">View On Map</string>
    <string name="activity_detail_reviews">Reviews</string>
    <string name="activity_detail_favourites">Favourites</string>
    <string name="title_activity_review_detail">Review Detail</string>
    <string name="title_activity_add_review">Add Review</string>
    <string name="review_title">Review Title</string>
    <string name="review_content">Review</string>
    <string name="save_review">Save Review</string>
    <string name="review_no_title">Please enter a review title</string>
    <string name="review_no_content">Please enter some review content</string>
    <string name="review_add_success_title">Review Added</string>
    <string name="review_add_success_content">Review successfully added</string>
    <string name="toast_favourite_toggle">Favourite Attraction Toggled</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_share_text">I\'m loving this attraction&#160;</string>
    <string name="empty_view_text">You haven\'t got any favourites</string>

    <string name="unkown_error_title">Error</string>
    <string name="unknown_error_msg">Sorry there has been an unknown error.</string>
    <string name="location_denied_error_msg">User location will not show</string>

    <string name="pref_favs_key" translatable="false">show_favourites</string>
    <string name="pref_favs_title">Show Favourites</string>
    <string name="pref_favs_label">Show only a list of your favourite attractions</string>
    <string name="add_widget">Add widget</string>

    <string name="loading">Loading&#8230;</string>
    <string name="no_internet_title">No Connection</string>
    <string name="no_internet_msg">We\'ve been unable to detect a reliable internet connection. Please try again.</string>
</resources>
