<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Spinner
        android:id="@+id/fragment_reviews_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/add_review_margins"
        android:layout_marginBottom="@dimen/add_review_margins"
        android:spinnerMode="dialog" />

    <RatingBar
        android:id="@+id/add_review_star_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_add_review_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_review_margins"
        android:hint="@string/review_title">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_add_review_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_add_review_content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_review_margins"
        android:layout_marginBottom="@dimen/add_review_margins"
        android:hint="@string/review_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_add_review_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/activity_add_review_button"
        style="@style/DetailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save_review" />
</LinearLayout>